--- a/cdd-counter/package.json
+++ b/cdd-counter/package.json
@@ -45,5 +45,6 @@
     "extends": [
       "plugin:storybook/recommended"
     ]
-  }
+  },
+  "packageManager": "pnpm@9.1.1+sha1.09ada6cd05003e0ced25fb716f9fda4063ec2e3b"
 }
