--- a/cdd-counter/tsconfig.node.json
+++ b/cdd-counter/tsconfig.node.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": ".", // 프로젝트 루트를 기준으로 설정
+    "paths": {
+      "@/*": ["src/*"] // '@'를 'src'에 매핑
+    },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
     "lib": ["ES2023"],
