--- a/cdd-counter/tsconfig.node.json
+++ b/cdd-counter/tsconfig.node.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "baseUrl": ".", // 프로젝트 루트를 기준으로 설정
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"] // '@'를 'src'에 매핑
+      "@/*": ["src/*"]
     },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
