--- a/cdd-todo/package.json
+++ b/cdd-todo/package.json
@@ -15,7 +15,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
